--- a/form2.html
+++ b/form2.html
@@ -130,21 +130,21 @@
     <!-- Bộ hồ sơ 3 -->
     <div class="section" id="section3">
       <h3>Bộ hồ sơ 3: Hồ sơ chứng thực hợp đồng chuyển nhượng quyền sử dụng đất. Từ Dự thảo hợp đồng hãy nhập chính xác 16 trường sau:</h3>
-      <label>1. Tên hợp đồng:</label><input type="text" name="27_tenhopdong">
+      <label>1. Tên hợp đồng (ghi đầy đủ thông tin):</label><input type="text" name="27_tenhopdong">
       <label>2. Họ và tên bên chuyển nhượng (Bên A):</label><input type="text" name="28_ben_a">
       <label>3. Số CMND/CCCD bên A:</label><input type="text" name="29_cccd_a">
       <label>4. Địa chỉ thường trú bên A:</label><input type="text" name="30_diachi_a">
       <label>5. Họ và tên bên nhận chuyển nhượng (Bên B):</label><input type="text" name="31_ben_b">
       <label>6. Số CMND/CCCD bên B:</label><input type="text" name="32_cccd_b">
       <label>7. Địa chỉ thường trú bên B:</label><input type="text" name="33_diachi_b">
-      <label>8. Địa chỉ thửa đất:</label><input type="text" name="34_diachidat">
+      <label>8. Địa chỉ thửa đất (số thửa, tờ bản đồ, xã/huyện/Tỉnh):</label><input type="text" name="34_diachidat">
       <label>9. Diện tích chuyển nhượng (m²):</label><input type="text" name="35_dientich">
       <label>10. Tổng giá trị chuyển nhượng (VND):</label><input type="text" name="36_giatri">
       <label>11. Hình thức sử dụng:</label><input type="text" name="37_hinhthuc">
       <label>12. Mục đích sử dụng:</label><input type="text" name="38_mucdich">
       <label>13. Thời hạn sử dụng:</label><input type="text" name="39_thoihan">
       <label>14. Ngày lập hợp đồng (dd/mm/yyyy):</label><input type="text" name="40_ngaylaphopdong">
-      <label>15. Ngày cấp GCNQSDĐ (dd/mm/yyyy):</label><input type="text" name="41_ngaycap">
+      <label>15. Ngày cấp Giấy chứng nhận quyền sử dụng đất (dd/mm/yyyy):</label><input type="text" name="41_ngaycap">
       <label>16. Tài sản gắn liền với đất:</label><input type="text" name="42_taisan">
       <div class="button-group">
         <button type="button" onclick="prevSection()">Quay lại</button>
